--- a/index.html
+++ b/index.html
@@ -10,36 +10,64 @@
 <body>
     <div class="header">
         <div class="header_logo">
-            logo
+            Header Logo
         </div>
         <div class="link">
             <ul class="link__">
-                <li>link1</li>
-                <li>link2</li>
-                <li>link3</li>
+                <li><a href="https://www.google.com/">link1</a></li>
+                <li><a href="https://www.google.com/">link2</a></li>
+                <li><a href="https://www.google.com/">link3</a></li>
             </ul>
         </div>
     </div>
     <div class="about">
-        <p class="title">
-            This Website is Awesome
-        </p>
-        <p class="subtitile">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos quibusdam, et eligendi libero dolorum! Laborum quisquam, porro incidunt dolorum ab at architecto impedit reprehenderit quas illum alias, provident id?
-        </p>
-        <img src="" alt="related image" class="image">
+        <div class="about_text">
+            <h1 class="title">
+                This Website is Awesome
+            </h1>
+            <p class="subtitile">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos quibusdam, et eligendi libero dolorum! Laborum quisquam, porro incidunt dolorum ab at architecto impedit reprehenderit quas illum alias, provident id?
+            </p>
+            <button class="button1">Sign up</button>
+        </div>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/530X236" alt="related image" class="image"></a>
     </div>
     <div class="feature">
-        Feature
+        <h1 class="info">Some random information</h1>
+        <div class="container">
+            <div class="box1">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
+                <p>this is some subtext under image</p>
+            </div>
+            <div class="box2">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
+                <p>this is some subtext under image</p>
+            </div>
+            <div class="box3">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
+                <p>this is some subtext under image</p>
+            </div>
+            <div class="box4">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
+                <p>this is some subtext under image</p>
+            </div>
+        </div>
     </div>
     <div class="quote">
-        Quote
+        <p class="quote__">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima harum amet assumenda unde praesentium nihil possimus molestiae corrupti nesciunt facere dolores atque, doloremque, consequuntur nemo reprehenderit magni dolorum sunt fuga?
+        </p>
+        <p class="by">-By line, someone</p>
     </div>
     <div class="contact">
-        Contact
+        <div class="contact__">
+            <h3>Call to action! It's time</h3>
+            <p>sign for exclusive benifits</p>
+            <button class="button2">Sign Up</button>
+        </div>
+        
     </div>
     <div class="footer">
-        Footer
+        <p class="copyright">Copyright The Odin Project 2021</p>
     </div>
 </body>
 </html>
