--- a/index.html
+++ b/index.html
@@ -8,66 +8,98 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header_logo">
-            Header Logo
-        </div>
-        <div class="link">
-            <ul class="link__">
-                <li><a href="https://www.google.com/">link1</a></li>
-                <li><a href="https://www.google.com/">link2</a></li>
-                <li><a href="https://www.google.com/">link3</a></li>
-            </ul>
+
+    <!-- Hero(Header + Main) -->
+    <div class="hero">
+
+        <!-- Header -->
+        <nav class="hero_header">
+            <div class="header_logo">
+                <span>Header Logo</span>
+            </div>
+            <div class="header_links">
+                <a href="#">Header Link one</a>
+                <a href="#">Header Link two</a>
+                <a href="#">Header Link three</a>
+                <a href="#">Header Link four</a>
+            </div>
+        </nav>
+
+        <!-- Main About -->
+        <div class="hero_main">
+            <div class="main_text">
+                <div class="text_primary">
+                    <h2>This Website is Awesome</h2>
+                </div>
+                <div class="text_secondary">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos in eveniet eaque quibusdam, dolores soluta ipsam voluptatem laudantium alias nisi.</p>
+                </div>
+            </div>
+
+            <!-- Main Sign-up Button -->
+            <button class="main_button signup">Sign Up</button>
+
+            <!-- Main Image -->
+            <div class="main_image">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/530X236" alt="related image"></a>
+            </div>
         </div>
     </div>
-    <div class="about">
-        <div class="about_text">
-            <h1 class="title">
-                This Website is Awesome
-            </h1>
-            <p class="subtitile">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus eos quibusdam, et eligendi libero dolorum! Laborum quisquam, porro incidunt dolorum ab at architecto impedit reprehenderit quas illum alias, provident id?
-            </p>
-            <button class="button1">Sign up</button>
-        </div>
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/530X236" alt="related image" class="image"></a>
-    </div>
+    
+    <!-- Feature and Info Section -->
     <div class="feature">
-        <h1 class="info">Some random information</h1>
-        <div class="container">
-            <div class="box1">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
-                <p>this is some subtext under image</p>
+        <div class="wrapper">
+            <div class="info_text">
+                <h2>Some random Information</h2>
             </div>
-            <div class="box2">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
-                <p>this is some subtext under image</p>
-            </div>
-            <div class="box3">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
-                <p>this is some subtext under image</p>
-            </div>
-            <div class="box4">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="" class=""></a>
-                <p>this is some subtext under image</p>
+            <div class="sub-wrapper">
+                <div class="subtext">
+                    <div>
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
+                        <span>this is some subtext under image</span>
+                    </div>
+                    <div>
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
+                        <span>this is some subtext under image</span>
+                    </div>
+                    <div>
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
+                        <span>this is some subtext under image</span>
+                    </div>
+                    <div>
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
+                        <span>this is some subtext under image</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Quote Section -->
     <div class="quote">
-        <p class="quote__">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima harum amet assumenda unde praesentium nihil possimus molestiae corrupti nesciunt facere dolores atque, doloremque, consequuntur nemo reprehenderit magni dolorum sunt fuga?
-        </p>
-        <p class="by">-By line, someone</p>
-    </div>
-    <div class="contact">
-        <div class="contact__">
-            <h3>Call to action! It's time</h3>
-            <p>sign for exclusive benifits</p>
-            <button class="button2">Sign Up</button>
+        <div class="quote_wrapper">
+            <p class="quote__">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum id iure deserunt tempora aut molestias qui, perferendis aliquam eius cupiditate!</p>
+            <span class="by">-By line, someone</span>
         </div>
-        
     </div>
-    <div class="footer">
-        <p class="copyright">Copyright The Odin Project 2021</p>
+
+    <!-- Contact Section -->
+    <div class="contact">
+        <div class="contact-wrapper">
+            <div class="contact_text">
+                <h3>Call to action! It's time</h3>
+                <span>sign for exclusive benifits</span>
+            </div>
+            <button class="contact_button signup">Sign Up</button>
+        </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer_wrapper">
+            <span class="copyright">Copyright &copy; The Odin Project 2021</span>
+        </div>
+    </footer>
+
 </body>
 </html>
