--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <a href="#">Header Link one</a>
                 <a href="#">Header Link two</a>
                 <a href="#">Header Link three</a>
-                <a href="#">Header Link four</a>
             </div>
         </nav>
 
@@ -33,11 +32,10 @@
                 </div>
                 <div class="text_secondary">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos in eveniet eaque quibusdam, dolores soluta ipsam voluptatem laudantium alias nisi.</p>
+                    <!-- Main Sign-up Button -->
+                    <button class="main_button signup">Sign Up</button>
                 </div>
             </div>
-
-            <!-- Main Sign-up Button -->
-            <button class="main_button signup">Sign Up</button>
 
             <!-- Main Image -->
             <div class="main_image">
@@ -56,19 +54,19 @@
                 <div class="subtext">
                     <div>
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
-                        <span>this is some subtext under image</span>
+                        <p>this is some subtext under image</p>
                     </div>
                     <div>
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
-                        <span>this is some subtext under image</span>
+                        <p>this is some subtext under image</p>
                     </div>
                     <div>
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
-                        <span>this is some subtext under image</span>
+                        <p>this is some subtext under image</p>
                     </div>
                     <div>
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/170" alt="Reference Image"></a>
-                        <span>this is some subtext under image</span>
+                        <p>this is some subtext under image</p>
                     </div>
                 </div>
             </div>
@@ -78,19 +76,21 @@
     <!-- Quote Section -->
     <div class="quote">
         <div class="quote_wrapper">
-            <p class="quote__">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum id iure deserunt tempora aut molestias qui, perferendis aliquam eius cupiditate!</p>
-            <span class="by">-By line, someone</span>
+            <p class="__quote">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe fugit repellendus nostrum omnis, excepturi, sit eligendi debitis, nesciunt eius dolore officiis dicta possimus aspernatur porro hic illo ullam asperiores. Nesciunt.</p>
+            <span class="by">-Thor, God of Thunder</span>
         </div>
     </div>
 
     <!-- Contact Section -->
     <div class="contact">
-        <div class="contact-wrapper">
-            <div class="contact_text">
-                <h3>Call to action! It's time</h3>
-                <span>sign for exclusive benifits</span>
+        <div class="contact_wrapper">
+            <div class="contact_left">
+               <h3>Call to action! It's time</h3> 
+               <p>sign for exclusive benifits</p> 
             </div>
-            <button class="contact_button signup">Sign Up</button>
+            <div class="contact-right">
+                <button class="contact_button signup">Sign Up</button>
+            </div>
         </div>
     </div>
 
